--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+projeto_imagem1.PNG
+projeto_imagem2.PNG
+projeto_imagem3.PNG
+projeto_imagem4.PNG
+projeto_imagem5.PNG
